; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-getaddrinfo.c_getaddrinfo_fail_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-getaddrinfo.c_getaddrinfo_fail_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32 }

@fail_cb_called = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, %struct.addrinfo*)* @getaddrinfo_fail_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @getaddrinfo_fail_cb(i32* %0, i32 %1, %struct.addrinfo* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.addrinfo*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.addrinfo* %2, %struct.addrinfo** %6, align 8
  %7 = load i64, i64* @fail_cb_called, align 8
  %8 = icmp eq i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load %struct.addrinfo*, %struct.addrinfo** %6, align 8
  %16 = icmp eq %struct.addrinfo* %15, null
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  %19 = load %struct.addrinfo*, %struct.addrinfo** %6, align 8
  %20 = call i32 @uv_freeaddrinfo(%struct.addrinfo* %19)
  %21 = load i64, i64* @fail_cb_called, align 8
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* @fail_cb_called, align 8
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_freeaddrinfo(%struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
